# artemis

./: .gitignore  CMakeLists.txt  README.md  deploy.sh
configs/: MV-CH430-90XM-F-NF.js  Victorem 262G41MCX.js  Victorem 262G41NCX.js
src/: AcquisitionTask.cpp  AcquisitionTask.hpp  Application.cpp  Application.hpp  ApriltagDetector.cpp  CMakeLists.txt  EuresysFrameGrabber.cpp  EuresysFrameGrabber.hpp  FrameGrabber.hpp  FullFrameExportTask.cpp  FullFrameExportTask.hpp  LibTorchFeedingDetector.cpp  LibTorchFeedingDetector.hpp  LibTorchTrophallaxisDetector.cpp  LibTorchTrophallaxisDetector.hpp  Options.cpp  Options.hpp  OptionsUTest.cpp  ProcessFrameTask.cpp  ProcessFrameTask.hpp  StubFrameGrabber.cpp  StubFrameGrabber.hpp  StubVideoGrabber.cpp  StubVideoGrabber.hpp  TrackingDetector.cpp  TrackingDetector.hpp  TrophallaxisDetector.cpp  TrophallaxisDetector.hpp  UserInterfaceTask.cpp  UserInterfaceTask.hpp  VideoStdoutTask.cpp  VideoStdoutTask.hpp  libtesttorch.cpp_  main.cpp  mytorch.hpp_
src/detectors/: CMakeLists.txt  Tracking.cpp  Tracking.hpp  Trophallaxis.cpp  Trophallaxis.hpp
src/trophallaxis/: CMakeLists.txt  antdetect.cpp  antdetect.hpp  trophallaxis.cpp  trophallaxis.hpp
src/ui/: GLUserInterface.cpp  GLUserInterface.hpp  UserInterface.hpp
src/utils/: FlagParser.cpp  FlagParserImpl.h
